plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ecommerce'
version = '0.0.1-SNAPSHOT'
description = 'Backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    jjwtVersion      = '0.12.6'
    mapstructVersion = '1.6.2'
    lombokVersion    = '1.18.40'
}

dependencies {
    // ── Spring Boot Starters ──────────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // ── MySQL Driver ──────────────────────────────────
    runtimeOnly 'com.mysql:mysql-connector-j'

    // ── JWT ───────────────────────────────────────────
    implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
    runtimeOnly    "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
    runtimeOnly    "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

    // ── MapStruct ─────────────────────────────────────
    implementation      "org.mapstruct:mapstruct:${mapstructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

    // ── Lombok ────────────────────────────────────────
    compileOnly         "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    // Binding đảm bảo Lombok chạy trước MapStruct
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // ── Swagger / OpenAPI ─────────────────────────────
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // ── Testing ───────────────────────────────────────
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}


tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-proc:full']
}
